[macOS] Switching to discrete GPU should be done in the UI process https://bugs.webkit.org/show_bug.cgi?id=189361 <rdar://problem/43949622>

Try to fix the IOSMAC build.

* platform/graphics/GraphicsContext3D.h:

Canonical link: https://commits.webkit.org/205201@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236796 268f45cc-cd09-0410-ab3c-d52691b4dbfc